# final-project-level3-nlp-01

./: Makefile  README.md  backend.py  debug.py  frontend.py  pipeline.py  pyproject.toml  seg_0125.pickle
STT/: setup.py
STT/data/: audio.py  conf.yaml  make_dataset.py
STT/data/utils/: custom_split.py  output_to_dataframe.py
STT/inference/: inference.py
STT_postprocessing/: dataloader.py  inference.py  main.py  pyproject.toml  split_data.py  test.py  train.py
STT_postprocessing/Kogpt2_finetuning/: dataloader.py  one_sentence_inference.py  train.py
STT_postprocessing/app/: __main__.py  frontend.py  main.py
STT_postprocessing/app/utils/: stt_model_init.py
app/: .gitignore  __main__.py  client.py  server.py
app/STT/: setup.py
app/STT/data/: audio.py  conf.yaml  make_dataset.py
app/STT/data/utils/: custom_split.py  delete_loop.py
app/STT/inference/: inference.py
app/keyword_extraction/: filtering.py  main.py  stopwords.txt
app/keyword_extraction/data_utils/: vocab_tokenizer.py
app/keyword_extraction/ner_config/: net.py
app/question_generation/: kobart_qg.py  main.py  qg_filtering.py  t5_pipeline.py
app/stt_postprocessing/: dataloader.py  inference.py  main.py  split_data.py  test.py
app/summary/: dataloader.py  main.py  postprocess.py  preprocess.py  summary.py
app/utils/: keyword_model_init.py  qg_model_init.py  stt_model_init.py  summary_model_init.py
backend/: .gitignore  main.py  pipeline.py
backend/STT/data/: conf.yaml
backend/output/STT/download/[#한국사능력검정]설민석_10분순삭!한번에정리되는일제강점기!_00/: wav0.scp
data_utils/: vocab_tokenizer.py
espnet-asr/: arguments.py  conf.yaml  decode_conf.yaml  inference.py  main.py  make_dataset.py  speech2text.py  utils.py
espnet-asr/dataset/validation/labeled_data/D05/G01/S000146/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+165 more)
espnet-asr/dataset/validation/labeled_data/D05/G01/S000212/: 000000.txt  000001.txt  000002.txt  (+169 more)
espnet-asr/dataset/validation/labeled_data/E2/S000001/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  000040.txt  (+276 more)
espnet-asr/dataset/validation/labeled_data/E2/S000002/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000039.txt  000040.txt  000041.txt  (+286 more)
fastapi/: backend.py  pyproject.toml
fastapi/qg/: main.py  similarity.py  t5_pipeline.py
first_keyword_extraction/: keybert_model.py  keyword_extraction.py  stopwords.txt
from-file/: decode_conf.yaml  speech_recognition.py  split.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js  postProcessingPage.js  questionGenerationPage.js  sttPage.js  summarizationPage.js
kobart_fintuning/: dataset.py  download_binary.py  get_model_binary.py  infer.py  run_train.sh  train.py
mt5/: mt5_train.py
stt/: pyproject.toml
stt/STT/: setup.py
stt/STT/data/: audio.py  make_dataset.py
stt/STT/data/utils/: output_to_dataframe.py
summary/: main.py  preprocess.py
t5_finetuning/: README.md  pyproject.toml  t5_for_qg.py  test.py  train.py
(+18 files in other folders)
