[tool.poetry]
name = "stt"
version = "0.1.0"
description = "stt"
authors = ["wooy0ng <yygg9800@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
omegaconf = "^2.3.0"
pydub = "^0.25.1"
pandas = "^1.5.3"
soundfile = "^0.11.0"
pip = "^22.3.1"
tqdm = "^4.64.1"
openai-whisper = "^20230117"
whisper = "^1.1.10"
torch = "^1.13.1"
numpy = "1.23.5"
librosa = "^0.9.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
