[tool.poetry]
name = "stt-postprocessing"
version = "0.1.0"
description = "final project"
authors = ["jun <jwlee9381@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stt_postprocessing"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
torch = "^1.13.1"
wandb = "^0.13.9"
tqdm = "^4.64.1"
transformers = "^4.25.1"
scikit-learn = "^1.2.0"
fastapi = "0.70.0"
uvicorn = "0.15.0"
streamlit = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
