[tool.poetry]
name = "qg-project"
version = "0.1.0"
description = "qg FastAPI test"
authors = ["hyeb <hyeb05512@gmail.com>"]
readme = "README.md"
packages = [{include = "qg_project"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.89.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
transformers = "4.25.1"
pytest = "^7.2.1"
torch = "1.13.1"
streamlit = "1.2.0"
uvicorn = "0.15.0"
nltk = "3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
